package prototypePattern;

import java.io.Serializable;

public interface Prototype extends Cloneable, Serializable {
}
